Adding code of conduct

--- a/README.qmd
+++ b/README.qmd
@@ -46,5 +46,7 @@ for (i in 1:length(titles)) {
 }
 ```
 
-
+## Code of Conduct
+  
+  Please note that the PHS-7045-egga project is released with a [Contributor Code of Conduct](https://contributor-covenant.org/version/2/1/CODE_OF_CONDUCT.html). By contributing to this project, you agree to abide by its terms. 
 
